# polaq_master_thesis

./: .gitignore  LICENSE  README.md
polaq_create/: Makefile  pyproject.toml
polaq_create/squad_pl/: __init__.py  utils.py
polaq_create/squad_pl/annotation/: annotate_with_corenlp.py
polaq_create/squad_pl/doc2vec/: check.py  preprocess.py  similarity.py  train.py  utils.py
polaq_create/squad_pl/generate_squad/: analyze_filtered.py  extend_squad.py  find_similar_wiki_sentences.py  generate.py  generate_dev_set.py  process_similar_wiki_sentences.py
polaq_create/squad_pl/matplotlib/: plots.py
polaq_create/squad_pl/preprocessing/: add_new_lines_to_sql_values.sh  filter_wiki_pagelinks.sh  preprocess.py
polaq_create/squad_pl/preprocessing/old/: add_polish_articles_to_squad_data.py  clean_wiki_text_from_markups.sh  join_squad_files.py  preprocessing.py
polaq_create/squad_pl/proto/: CoreNLP.proto  README.md  dataset.proto  dataset_pb2.py  io.py
polaq_create/squad_pl/translate/: translate_answers.py  translate_questions.py  utils.py
polaq_test/: dowload_bert_model.sh  evaluate-v1.1.py  evaluate.sh  init.sh  predict.sh  sync_results.sh  train.sh
polaq_test/data/: polaq_dataset_manual.json  polaq_dataset_test.json
polaq_test/output/depth_0/: nbest_predictions.json  predictions.json  score.txt
polaq_test/output/depth_0_combined/: nbest_predictions.json  predictions.json  score.txt
polaq_test/output/depth_0_combined_second_try/: nbest_predictions.json  predictions.json  score.txt
polaq_test/output/depth_1/: nbest_predictions.json  predictions.json  (+1 more)
(+11 files in other folders)
